--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckEditBox/Brainf_ckEditBox.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckEditBox/Brainf_ckEditBox.xaml
@@ -44,9 +44,9 @@
                         are set from a property that lets users assign the content externally.-->
                     <AppBarButton x:Name="SpacerButton1" IsHitTestVisible="False" IsTabStop="False" Visibility="Collapsed"/>
                     <AppBarButton x:Name="SpacerButton2" IsHitTestVisible="False" IsTabStop="False" Visibility="Collapsed"/>
-                    <AppBarButton Label="Cut" Icon="Cut" ToolTipService.ToolTip="Cut" IsEnabled="{TemplateBinding IsTextSelected}"/>
-                    <AppBarButton Label="Copy" Icon="Copy" ToolTipService.ToolTip="Copy" IsEnabled="{TemplateBinding IsTextSelected}"/>
-                    <AppBarButton Label="Paste" Icon="Paste" ToolTipService.ToolTip="Paste" IsEnabled="{TemplateBinding IsTextInClipboard}"/>
+                    <AppBarButton Label="Cut" Icon="Cut" ToolTipService.ToolTip="Cut" IsEnabled="{Binding IsTextSelected}"/>
+                    <AppBarButton Label="Copy" Icon="Copy" ToolTipService.ToolTip="Copy" IsEnabled="{Binding IsTextSelected}"/>
+                    <AppBarButton Label="Paste" Icon="Paste" ToolTipService.ToolTip="Paste" IsEnabled="{Binding IsTextInClipboard}"/>
                     <CommandBarFlyout.SecondaryCommands>
                         <AppBarElementContainer
                             x:Name="SecondaryContentContainer"
