--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -11,6 +11,7 @@
     xmlns:collections="using:Microsoft.Toolkit.Collections"
     xmlns:subPages="using:Brainf_ckSharp.Shared.ViewModels.Controls.SubPages"
     xmlns:markupExtensions="using:Brainf_ckSharp.Uwp.MarkupExtensions"
+    xmlns:interpreterEnums="using:Brainf_ckSharp.Enums"
     xmlns:enums="using:Brainf_ckSharp.Shared.Enums"
     xmlns:enumsSettings="using:Brainf_ckSharp.Shared.Enums.Settings"
     xmlns:dataTemplates="using:Brainf_ckSharp.Uwp.Controls.DataTemplates"
@@ -219,8 +220,26 @@
             x:DataType="enums:SettingsSection">
             <StackPanel Spacing="4">
 
+                <!--Overflow mode-->
+                <TextBlock
+                    TextWrapping="Wrap"
+                    Text="Overflow mode"/>
+                <ComboBox
+                    CornerRadius="0"
+                    Margin="0,4,0,0"
+                    MinWidth="140"
+                    ItemsSource="{markupExtensions:EnumValues Type=interpreterEnums:OverflowMode}"
+                    SelectedItem="{x:Bind ViewModel.OverflowMode, Mode=TwoWay}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate x:DataType="interpreterEnums:OverflowMode">
+                            <TextBlock Text="{x:Bind convertersSubPages:OverflowModeConverter.Convert((interpreterEnums:OverflowMode))}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
                 <!--Memory size-->
                 <TextBlock
+                    Margin="0,8,0,0"
                     TextWrapping="Wrap"
                     Text="Memory size"/>
                 <ComboBox
