--- a/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/Header/StdinHeader.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/Header/StdinHeader.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.Uwp.Controls.Host.InputPanel.Header.StdinHeader"
+    x:Class="Brainf_ckSharp.Uwp.Controls.Host.InputPanel.StdinHeader"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
-    xmlns:header="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.Header"
+    xmlns:local="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel"
     xmlns:controls="using:Brainf_ckSharp.Shared.ViewModels.Controls"
     mc:Ignorable="d"
     d:DesignHeight="48"
@@ -45,12 +45,12 @@
         </VisualStateManager.VisualStateGroups>
 
         <!--Sections-->
-        <header:MinimalHeaderButton
+        <local:MinimalHeaderButton
             Grid.Column="0"
             Icon="{StaticResource OperatorsKeyboardIcon}"
             IsSelected="{x:Bind converters:PivotSelectionConverter.ConvertIndexToBool(StdinSelectedIndex, 0), Mode=OneWay}"
             Selected="VirtualKeyboardHeaderSelected"/>
-        <header:MinimalHeaderButton
+        <local:MinimalHeaderButton
             Icon="{StaticResource QuickMemoryViewerIcon}"
             Grid.Column="1"
             IsSelected="{x:Bind converters:PivotSelectionConverter.ConvertIndexToBool(StdinSelectedIndex, 1), Mode=OneWay}"
