--- a/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/VirtualKeyboard/VirtualKeyboard.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/VirtualKeyboard/VirtualKeyboard.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.Uwp.Controls.Host.InputPanel.VirtualKeyboard.OperatorsKeyboard"
+    x:Class="Brainf_ckSharp.Uwp.Controls.Host.InputPanel.VirtualKeyboard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.VirtualKeyboard"
+    xmlns:local="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel"
     xmlns:constants="using:Brainf_ckSharp.Constants"
     xmlns:controls="using:Brainf_ckSharp.Shared.ViewModels.Controls"
     mc:Ignorable="d"
