--- a/src/Brainf_ckSharp.Uwp/Styles/ButtonsStyles.xaml
+++ b/src/Brainf_ckSharp.Uwp/Styles/ButtonsStyles.xaml
@@ -2,8 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:hostHeader="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
-    xmlns:inputPanelHeader="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.Header"
-    xmlns:virtualKeyboard="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.VirtualKeyboard"
+    xmlns:inputPanel="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel"
     xmlns:winui="using:Microsoft.UI.Xaml.Media">
 
     <!--Custom base style for buttons, expanding the style from WinUI-->
@@ -173,10 +172,10 @@
     </Style>
 
     <!--Minimal header button-->
-    <Style TargetType="inputPanelHeader:MinimalHeaderButton">
+    <Style TargetType="inputPanel:MinimalHeaderButton">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="inputPanelHeader:MinimalHeaderButton">
+                <ControlTemplate TargetType="inputPanel:MinimalHeaderButton">
                     <Button x:Name="RootButton" Style="{StaticResource ExpandedSquareButtonRevealStyle}">
                         <Button.Resources>
                             <SolidColorBrush x:Key="ButtonRevealBackgroundDisabled" Color="#40181818"/>
@@ -232,10 +231,10 @@
     </Style>
 
     <!--Operator button-->
-    <Style TargetType="virtualKeyboard:OperatorButton">
+    <Style TargetType="inputPanel:OperatorButton">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="virtualKeyboard:OperatorButton">
+                <ControlTemplate TargetType="inputPanel:OperatorButton">
                     <Button
                         Style="{StaticResource ExpandedSquareButtonRevealStyle}"
                         Background="#32000000"
