--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -16,6 +16,7 @@
     xmlns:enumsSettings="using:Brainf_ckSharp.Shared.Enums.Settings"
     xmlns:dataTemplates="using:Brainf_ckSharp.Uwp.Controls.DataTemplates"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
+    xmlns:convertersUI="using:Brainf_ckSharp.Uwp.Converters.UI"
     xmlns:convertersSubPages="using:Brainf_ckSharp.Uwp.Converters.SubPages"
     xmlns:convertersToolkit="using:Microsoft.Toolkit.Uwp.UI.Converters"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
@@ -42,18 +43,11 @@
             x:DataType="enums:SettingsSection">
             <StackPanel Spacing="4">
 
-                <!--Autosave documents-->
+                <!--Resume where I left off-->
                 <TextBlock
                     TextWrapping="Wrap"
-                    Text="Autosave documents"/>
-                <ToggleSwitch IsOn="{x:Bind ViewModel.AutosaveDocuments, Mode=TwoWay}"/>
-
-                <!--Protect unsaved changes-->
-                <TextBlock
-                    Margin="0,8,0,0"
-                    TextWrapping="Wrap"
-                    Text="Protect unsaved changes"/>
-                <ToggleSwitch IsOn="{x:Bind ViewModel.ProtectUnsavedChanges, Mode=TwoWay}"/>
+                    Text="Resume where I left off"/>
+                <ToggleSwitch IsOn="{x:Bind ViewModel.ResumeIdeState, Mode=TwoWay}"/>
 
                 <!--Theme-->
                 <TextBlock
