--- a/src/Brainf_ckSharp.Uwp/Styles/TelerikStyles.xaml
+++ b/src/Brainf_ckSharp.Uwp/Styles/TelerikStyles.xaml
@@ -21,65 +21,81 @@
                         <!--Visual states-->
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup>
+                                <VisualStateGroup.Transitions>
+                                    <VisualTransition From="Collapsed" To="Expanded">
+                                        <Storyboard>
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="ExpandablePresenter"
+                                                Storyboard.TargetProperty="Height"
+                                                To="{TemplateBinding ExpandableContentHeight}"
+                                                Duration="0:0:0.25"
+                                                EnableDependentAnimation="True">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <CircleEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="ExpandablePresenter"
+                                                Storyboard.TargetProperty="Opacity"
+                                                From="0"
+                                                To="1"
+                                                Duration="0:0:0.15">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <CircleEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="IconTransform"
+                                                Storyboard.TargetProperty="Angle"
+                                                From="-180"
+                                                To="0"
+                                                Duration="0:0:0.25"/>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                    <VisualTransition From="Expanded" To="Collapsed">
+                                        <Storyboard>
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="ExpandablePresenter"
+                                                Storyboard.TargetProperty="Height"
+                                                To="0"
+                                                Duration="0:0:0.25"
+                                                EnableDependentAnimation="True">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <CircleEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="ExpandablePresenter"
+                                                Storyboard.TargetProperty="Opacity"
+                                                From="1"
+                                                To="0"
+                                                Duration="0:0:0.15">
+                                                <DoubleAnimation.EasingFunction>
+                                                    <CircleEase EasingMode="EaseOut"/>
+                                                </DoubleAnimation.EasingFunction>
+                                            </DoubleAnimation>
+                                            <DoubleAnimation
+                                                Storyboard.TargetName="IconTransform"
+                                                Storyboard.TargetProperty="Angle"
+                                                From="0"
+                                                To="-180"
+                                                Duration="0:0:0.25"/>
+                                        </Storyboard>
+                                    </VisualTransition>
+                                </VisualStateGroup.Transitions>
                                 <VisualState x:Name="Collapsed">
-                                    <Storyboard>
-                                        <DoubleAnimation
-                                            Storyboard.TargetName="ExpandablePresenter"
-                                            Storyboard.TargetProperty="Height"
-                                            To="0"
-                                            Duration="0:0:0.25"
-                                            EnableDependentAnimation="True">
-                                            <DoubleAnimation.EasingFunction>
-                                                <CircleEase EasingMode="EaseOut"/>
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                        <DoubleAnimation
-                                            Storyboard.TargetName="ExpandablePresenter"
-                                            Storyboard.TargetProperty="Opacity"
-                                            From="1"
-                                            To="0"
-                                            Duration="0:0:0.15">
-                                            <DoubleAnimation.EasingFunction>
-                                                <CircleEase EasingMode="EaseOut"/>
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                        <DoubleAnimation
-                                            Storyboard.TargetName="IconTransform"
-                                            Storyboard.TargetProperty="Angle"
-                                            From="0"
-                                            To="-180"
-                                            Duration="0:0:0.25"/>
-                                    </Storyboard>
+                                    <VisualState.Setters>
+                                        <Setter Target="ExpandablePresenter.Height" Value="0"/>
+                                        <Setter Target="ExpandablePresenter.Opacity" Value="0"/>
+                                        <Setter Target="IconTransform.Angle" Value="-180"/>
+                                    </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Expanded">
-                                    <Storyboard>
-                                        <DoubleAnimation
-                                            Storyboard.TargetName="ExpandablePresenter"
-                                            Storyboard.TargetProperty="Height"
-                                            To="{TemplateBinding ExpandableContentHeight}"
-                                            Duration="0:0:0.25"
-                                            EnableDependentAnimation="True">
-                                            <DoubleAnimation.EasingFunction>
-                                                <CircleEase EasingMode="EaseOut"/>
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                        <DoubleAnimation
-                                            Storyboard.TargetName="ExpandablePresenter"
-                                            Storyboard.TargetProperty="Opacity"
-                                            From="0"
-                                            To="1"
-                                            Duration="0:0:0.15">
-                                            <DoubleAnimation.EasingFunction>
-                                                <CircleEase EasingMode="EaseOut"/>
-                                            </DoubleAnimation.EasingFunction>
-                                        </DoubleAnimation>
-                                        <DoubleAnimation
-                                            Storyboard.TargetName="IconTransform"
-                                            Storyboard.TargetProperty="Angle"
-                                            From="-180"
-                                            To="0"
-                                            Duration="0:0:0.25"/>
-                                    </Storyboard>
+                                    <VisualState.Setters>
+                                        <Setter Target="ExpandablePresenter.Height" Value="{Binding ExpandableContentHeight, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                        <Setter Target="ExpandablePresenter.Opacity" Value="1"/>
+                                        <Setter Target="IconTransform.Angle" Value="0"/>
+                                    </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
