Fixed startup loading when opening a file

--- a/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
@@ -8,11 +8,10 @@
     xmlns:views="using:Brainf_ckSharp.Shared.ViewModels.Views"
     xmlns:models="using:Brainf_ckSharp.Shared.Models.Ide"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    Loaded="IdeView_OnLoaded">
     <UserControl.DataContext>
         <views:IdeViewModel
             x:Name="ViewModel"
@@ -24,11 +23,6 @@
             CodeSaved="ViewModel_CodeSaved"
             StateRestored="ViewModel_OnStateRestored"/>
     </UserControl.DataContext>
-    <interactivity:Interaction.Behaviors>
-        <core:EventTriggerBehavior EventName="Loaded">
-            <core:InvokeCommandAction Command="{x:Bind ViewModel.RestoreStateCommand}"/>
-        </core:EventTriggerBehavior>
-    </interactivity:Interaction.Behaviors>
     <UserControl.Resources>
 
         <!--Code snippet template-->
